k8s/legacy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mytube-ingress
  namespace: mytube
  annotations:
    kubernetes.io/ingress.class: "traefik"
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
  - host: lhmswww.com
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: fastapi
            port:
              number: 80
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 80
